[project]
name = "kth-dataset-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.20",
    "dill>=0.4.1",
    "glom>=25.12.0",
    "ipython>=9.11.0",
    "marimo>=0.22.4",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pathlib>=1.0.1",
    "playwright>=1.58.0",
    "plotly>=6.6.0",
    "pypcd4>=1.4.3",
    "pyzmq>=27.1.0",
    "rich>=14.3.3",
    "ruamel-yaml>=0.19.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
